--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Fire Chicken Games</title>
 
     <!-- CSS only -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="vendor/fontawesome/css/fontawesome.min.css">
     <link rel="stylesheet" href="vendor/fontawesome/css/brands.min.css">
     <link rel="stylesheet" href="vendor/fontawesome/css/solid.min.css">
@@ -14,22 +14,33 @@
 
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-0 bg-danger text-white">
     <div>
-        <img src="img/logo.png" style="width:50px;">
+        <img src="img/logo.png" style="width:60px;">
     </div>
     <h5 class="my-0 mr-md-auto font-weight-normal"></h5>
     <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-3 text-white" href="#">About</a>
-        <a class="p-3 text-white" href="#">Combat</a>
-        <a class="p-3 text-white" href="#">Contact</a>
+<!--        <a class="p-3 text-white" href="#">About</a>-->
+<!--        <a class="p-3 text-white" href="#">Combat</a>-->
+<!--        <a class="p-3 text-white" href="#">Contact</a>-->
         <a class="p-1 text-white"
-           href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669">
+           href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669"
+           target="_blank">
             <span class="fab fa-unity"></span>
         </a>
-        <a class="p-1 text-white" href="https://twitter.com/firechickengms">
+        <a class="p-1 text-white"
+           href="https://twitter.com/firechickengms"
+           target="_blank">
             <span class="fab fa-twitter"></span>
         </a>
-        <a class="p-1 text-white" href="https://www.youtube.com/channel/UCuIPEob3ANgdnWmoh5Z3l-g">
+        <a class="p-1 text-white"
+           href="https://www.youtube.com/channel/UCuIPEob3ANgdnWmoh5Z3l-g"
+           target="_blank">
             <span class="fab fa-youtube"></span>
+        </a>
+
+        <a class="p-1 text-white"
+           href="https://discord.com/channels/367737056568541185/696644779018289242"
+           target="_blank">
+            <span class="fab fa-discord"></span>
         </a>
     </nav>
 </div>
@@ -43,20 +54,22 @@
             </div>
         </div>
         <a class="btn btn-light"
-           href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669">
+           href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669"
+           target="_blank">
             Download
         </a>
         <a class="btn btn-danger"
-           href="https://docs.firechickengames.com/">
+           href="https://docs.firechickengames.com/"
+           target="_blank">
             Documentation
         </a>
     </div>
 </div>
 
 <div class="border-wave">
-  <svg viewBox="0 0 500 500" preserveAspectRatio="xMinYMin meet">
-    <path d="M0,100 C150,200 350,0 500,100 L500,00 L0,0 Z" style="stroke: none; fill:#e53935;"></path>
-  </svg>
+    <svg viewBox="0 0 500 500" preserveAspectRatio="xMinYMin meet">
+        <path d="M0,100 C150,200 350,0 500,100 L500,00 L0,0 Z" style="stroke: none; fill:#e53935;"></path>
+    </svg>
 </div>
 
 <!--<div class="border-wave"></div>-->
