--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="vendor/fontawesome/css/brands.min.css">
     <link rel="stylesheet" href="vendor/fontawesome/css/solid.min.css">
 </head>
-<body>
+<body style="background: #dcdbdb;">
 
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-0 bg-danger text-white">
     <div>
@@ -24,23 +24,23 @@
         <a class="p-1 text-white"
            href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669"
            target="_blank">
-            <span class="fab fa-unity"></span>
+            <span class="fab fa-unity fa-2x"></span>
         </a>
         <a class="p-1 text-white"
            href="https://twitter.com/firechickengms"
            target="_blank">
-            <span class="fab fa-twitter"></span>
+            <span class="fab fa-twitter fa-2x"></span>
         </a>
         <a class="p-1 text-white"
            href="https://www.youtube.com/channel/UCuIPEob3ANgdnWmoh5Z3l-g"
            target="_blank">
-            <span class="fab fa-youtube"></span>
+            <span class="fab fa-youtube fa-2x"></span>
         </a>
 
         <a class="p-1 text-white"
            href="https://discord.com/channels/367737056568541185/696644779018289242"
            target="_blank">
-            <span class="fab fa-discord"></span>
+            <span class="fab fa-discord fa-2x"></span>
         </a>
     </nav>
 </div>
@@ -50,7 +50,7 @@
         <h1 class="pt-5">Combat for Game Creator</h1>
         <div class="lead mb-3" style="width: 70%">
             <div>
-                Thee Combat module introduces game-ready combat features to the Game Creator ecosystem.
+                The Combat module introduces game-ready combat features to the Game Creator ecosystem.
             </div>
         </div>
         <a class="btn btn-light"
@@ -72,6 +72,67 @@
     </svg>
 </div>
 
+
+<div class="container-fluid bg-white">
+    <div class="row" style="margin-top: -17em;">
+        <div class="col-md-6 text-right pr-5 d-none d-md-block">
+            <img src="https://via.placeholder.com/400" class="img-fluid shadow">
+        </div>
+        <div class="col-md-4 pt-5">
+            <div class="pt-5 mt-5">
+                <h2>Highly Customizable Targeting</h2>
+                <div>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book.
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row" style="margin-top: 5em;">
+        <div class="col-2"></div>
+        <div class="col-md-4 text-right pt-5">
+            <div class="pt mt-5">
+                <h2>Versatile Prefab Spawner</h2>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book.
+            </div>
+        </div>
+        <div class="col-md-6 pl-5">
+            <img src="https://via.placeholder.com/400" class="img-fluid shadow">
+        </div>
+    </div>
+
+    <div class="row" style="margin-top: 5em;">
+        <div class="col-md-6 text-right pr-5">
+            <img src="https://via.placeholder.com/400" class="img-fluid shadow">
+        </div>
+        <div class="col-md-4 pt-5">
+            <div class="pt-5 mt-5">
+                <h2>Convenient Weapon Stashes</h2>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book.
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="border-wave">
+    <svg viewBox="0 0 500 500" preserveAspectRatio="xMinYMin meet">
+        <path d="M0,100 C150,200 350,0 500,100 L500,00 L0,0 Z" style="stroke: none; fill:#fff;"></path>
+    </svg>
+</div>
+
+<div class="text-center" style="min-height: 180px;">
+    <a class="btn btn-light"
+       href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669"
+       target="_blank">
+        Download
+    </a>
+</div>
 
 <!-- JS, Popper.js, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
