--- a/index.html
+++ b/index.html
@@ -80,11 +80,10 @@
         </div>
         <div class="col-md-4 pt-5">
             <div class="pt-5 mt-5">
-                <h2>Highly Customizable Targeting</h2>
+                <h2>Customizable Targeting</h2>
                 <div>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
+                    <p>Need proximity-based collider or mouse-based point-and-click targeting? Combat has you covered.</p>
+                    <p>Advanced features include player targeting by visibility and trigger/action targeting for NPCs.</p>
                 </div>
             </div>
         </div>
@@ -92,12 +91,12 @@
 
     <div class="row" style="margin-top: 5em;">
         <div class="col-2"></div>
-        <div class="col-md-4 text-right pt-5">
+        <div class="col-md-4 text-left pt-5">
             <div class="pt mt-5">
                 <h2>Versatile Prefab Spawner</h2>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book.
+                <p>The spawner component uses object pooling to efficiently spawn and despawn game objects.</p>
+                <p>Advanced features include multiple spawn patterns, snapping spawned objects to the ground, respawning
+                cooldown, despawning by distance, and action-based spawning/despawning.</p>
             </div>
         </div>
         <div class="col-md-6 pl-5">
@@ -111,10 +110,8 @@
         </div>
         <div class="col-md-4 pt-5">
             <div class="pt-5 mt-5">
-                <h2>Convenient Weapon Stashes</h2>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book.
+                <h2>Shooter and Melee Integrations</h2>
+                <p>Seamlessly switch between Shooter and Melee weapons while focused on a target.</p>
             </div>
         </div>
     </div>
