Replace placeholders and tune styles

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 The Combat module introduces game-ready combat features to the Game Creator ecosystem.
             </div>
         </div>
-        <a class="btn btn-light"
+        <a class="btn btn-light rounded-pill"
            href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669"
            target="_blank">
             Download
@@ -76,14 +76,16 @@
 <div class="container-fluid bg-white">
     <div class="row" style="margin-top: -17em;">
         <div class="col-md-6 text-right pr-5 d-none d-md-block">
-            <img src="https://via.placeholder.com/400" class="img-fluid shadow">
+            <img src="img/combat_demo_1.png" class="img-fluid shadow demo-image">
         </div>
         <div class="col-md-4 pt-5">
             <div class="pt-5 mt-5">
                 <h2>Customizable Targeting</h2>
                 <div>
-                    <p>Need proximity-based collider or mouse-based point-and-click targeting? Combat has you covered.</p>
-                    <p>Advanced features include player targeting by visibility and trigger/action targeting for NPCs.</p>
+                    <p>Need proximity-based collider or mouse-based point-and-click targeting? Combat has you
+                        covered.</p>
+                    <p>Advanced features include player targeting by visibility and trigger/action targeting for
+                        NPCs.</p>
                 </div>
             </div>
         </div>
@@ -96,17 +98,17 @@
                 <h2>Versatile Prefab Spawner</h2>
                 <p>The spawner component uses object pooling to efficiently spawn and despawn game objects.</p>
                 <p>Advanced features include multiple spawn patterns, snapping spawned objects to the ground, respawning
-                cooldown, despawning by distance, and action-based spawning/despawning.</p>
+                    cooldown, despawning by distance, and action-based spawning/despawning.</p>
             </div>
         </div>
         <div class="col-md-6 pl-5">
-            <img src="https://via.placeholder.com/400" class="img-fluid shadow">
+            <img src="img/combat_demo_2.png" class="img-fluid shadow demo-image">
         </div>
     </div>
 
     <div class="row" style="margin-top: 5em;">
         <div class="col-md-6 text-right pr-5">
-            <img src="https://via.placeholder.com/400" class="img-fluid shadow">
+            <img src="img/combat_demo_3.png" class="img-fluid shadow demo-image">
         </div>
         <div class="col-md-4 pt-5">
             <div class="pt-5 mt-5">
@@ -124,7 +126,7 @@
 </div>
 
 <div class="text-center" style="min-height: 180px;">
-    <a class="btn btn-light"
+    <a class="btn btn-light rounded-pill"
        href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669"
        target="_blank">
         Download
