Add responsive layout support

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div class="bg-danger text-white">
     <div class="container">
         <h1 class="pt-5">Combat for Game Creator</h1>
-        <div class="lead mb-3" style="width: 70%">
+        <div class="lead mb-3">
             <div>
                 The Combat module introduces game-ready combat features to the Game Creator ecosystem.
             </div>
@@ -74,11 +74,11 @@
 
 
 <div class="container-fluid bg-white">
-    <div class="row" style="margin-top: -17em;">
-        <div class="col-md-6 text-right pr-5 d-none d-md-block">
+    <div class="row top-column-lg">
+        <div class="col-md-6 pr-5 text-center text-lg-right">
             <img src="img/combat_demo_1.png" class="img-fluid shadow demo-image">
         </div>
-        <div class="col-md-4 pt-5">
+        <div class="col-md-4 order-first order-md-last pt-5">
             <div class="pt-5 mt-5">
                 <h2>Customizable Targeting</h2>
                 <div>
@@ -93,8 +93,8 @@
 
     <div class="row" style="margin-top: 5em;">
         <div class="col-2"></div>
-        <div class="col-md-4 text-left pt-5">
-            <div class="pt mt-5">
+        <div class="col-md-4 pt-md-5 text-left">
+            <div class="pt mt-md-5">
                 <h2>Versatile Prefab Spawner</h2>
                 <p>The spawner component uses object pooling to efficiently spawn and despawn game objects.</p>
                 <p>Advanced features include multiple spawn patterns, snapping spawned objects to the ground, respawning
@@ -107,11 +107,11 @@
     </div>
 
     <div class="row" style="margin-top: 5em;">
-        <div class="col-md-6 text-right pr-5">
+        <div class="col-md-6 pr-5 text-center text-lg-right">
             <img src="img/combat_demo_3.png" class="img-fluid shadow demo-image">
         </div>
-        <div class="col-md-4 pt-5">
-            <div class="pt-5 mt-5">
+        <div class="col-md-4 order-first order-md-last pt-md-5">
+            <div class="pt-md-5 mt-md-5">
                 <h2>Shooter and Melee Integrations</h2>
                 <p>Seamlessly switch between Shooter and Melee weapons while focused on a target.</p>
             </div>
