Remove underline on header link hover

--- a/index.html
+++ b/index.html
@@ -21,27 +21,29 @@
         <!--        <a class="p-3 text-white" href="#">About</a>-->
         <!--        <a class="p-3 text-white" href="#">Combat</a>-->
         <!--        <a class="p-3 text-white" href="#">Contact</a>-->
-        <a class="p-1 text-white"
-           href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669"
-           target="_blank">
-            <span class="fab fa-unity fa-2x"></span>
-        </a>
-        <a class="p-1 text-white"
-           href="https://twitter.com/firechickengms"
-           target="_blank">
-            <span class="fab fa-twitter fa-2x"></span>
-        </a>
-        <a class="p-1 text-white"
-           href="https://www.youtube.com/channel/UCuIPEob3ANgdnWmoh5Z3l-g"
-           target="_blank">
-            <span class="fab fa-youtube fa-2x"></span>
-        </a>
+        <div class="header-links">
+            <a class="p-1 text-white"
+               href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669"
+               target="_blank">
+                <span class="fab fa-unity fa-2x"></span>
+            </a>
+            <a class="p-1 text-white"
+               href="https://twitter.com/firechickengms"
+               target="_blank">
+                <span class="fab fa-twitter fa-2x"></span>
+            </a>
+            <a class="p-1 text-white"
+               href="https://www.youtube.com/channel/UCuIPEob3ANgdnWmoh5Z3l-g"
+               target="_blank">
+                <span class="fab fa-youtube fa-2x"></span>
+            </a>
 
-        <a class="p-1 text-white"
-           href="https://discord.com/channels/367737056568541185/696644779018289242"
-           target="_blank">
-            <span class="fab fa-discord fa-2x"></span>
-        </a>
+            <a class="p-1 text-white"
+               href="https://discord.com/channels/367737056568541185/696644779018289242"
+               target="_blank">
+                <span class="fab fa-discord fa-2x"></span>
+            </a>
+        </div>
     </nav>
 </div>
 
