Polish responsive view

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 </div>
 
 <div class="bg-danger text-white">
-    <div class="container">
-        <h1 class="pt-5">Combat for Game Creator</h1>
+    <div class="container text-center text-md-left">
+        <h1 class="pt-md-5">Combat for Game Creator</h1>
         <div class="lead mb-3">
             <div>
                 The Combat module introduces game-ready combat features to the Game Creator ecosystem.
