Add favicons afn affiliate links

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
         </div>
         <a class="btn btn-light rounded-pill"
-           href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669"
+           href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669?aid=1101leteS"
            target="_blank">
             Download
         </a>
@@ -130,7 +130,7 @@
 
 <div class="text-center" style="min-height: 180px;">
     <a class="btn btn-light rounded-pill"
-       href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669"
+       href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669?aid=1101leteS"
        target="_blank">
         Download
     </a>
