--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <div class="col-md-4 order-first order-md-last pt-5">
             <div class="pt-5 mt-5">
-                <h2>Customizable Targeting</h2>
+                <h2>Versatile Targeting</h2>
                 <div>
                     <p>Need proximity-based collider or mouse-based point-and-click targeting? Combat has you
                         covered.</p>
@@ -98,7 +98,7 @@
         <div class="col-2"></div>
         <div class="col-md-4 pt-md-5 text-left">
             <div class="pt mt-md-5">
-                <h2>Versatile Prefab Spawner</h2>
+                <h2>Efficient Prefab Spawner</h2>
                 <p>The spawner component uses object pooling to efficiently spawn and despawn game objects.</p>
                 <p>Advanced features include multiple spawn patterns, snapping spawned objects to the ground, respawning
                     cooldown, despawning by distance, and action-based spawning/despawning.</p>
