Update for new products

--- a/index.html
+++ b/index.html
@@ -13,127 +13,144 @@
 </head>
 <body style="background: #dcdbdb;">
 
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-0 bg-danger text-white">
-    <div>
-        <img src="img/logo.png" style="width:60px;">
-    </div>
-    <h5 class="my-0 mr-md-auto font-weight-normal"></h5>
-    <nav class="my-2 my-md-0 mr-md-3">
-        <!--        <a class="p-3 text-white" href="#">About</a>-->
-        <!--        <a class="p-3 text-white" href="#">Combat</a>-->
-        <!--        <a class="p-3 text-white" href="#">Contact</a>-->
-        <div class="header-links">
-            <a class="p-1 text-white"
-               href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669"
-               target="_blank">
-                <span class="fab fa-unity fa-2x"></span>
-            </a>
-            <a class="p-1 text-white"
-               href="https://twitter.com/firechickengms"
-               target="_blank">
-                <span class="fab fa-twitter fa-2x"></span>
-            </a>
-            <a class="p-1 text-white"
-               href="https://www.youtube.com/channel/UCuIPEob3ANgdnWmoh5Z3l-g"
-               target="_blank">
-                <span class="fab fa-youtube fa-2x"></span>
-            </a>
+<div class="bg-white">
+    <div class="container">
+        <div class="d-flex flex-column flex-md-row align-items-center pt-1">
+            <div class="logo-bg rounded-circle">
+                <a href="/">
+                    <img src="img/logo-red.png" class="logo-image" alt="Fire Chicken Games" title="Fire Chicken Games">
+                </a>
+            </div>
 
-            <a class="p-1 text-white"
-               href="https://discord.com/channels/367737056568541185/696644779018289242"
-               target="_blank">
-                <span class="fab fa-discord fa-2x"></span>
-            </a>
+            <h5 class="my-0 mr-md-auto font-weight-normal"></h5>
+            <nav class="my-3 my-md-0 mr-md-3">
+                <div class="header-links">
+                    <a class="py-2 pl-1 btn btn-link"
+                       href="https://assetstore.unity.com/publishers/47141?aid=1101leteS"
+                       target="_blank">
+                        <span class="fab fa-unity fa-1x"></span> Assets
+                    </a>
+
+                    <a class="pl-1 btn btn-link"
+                       href="https://www.youtube.com/channel/UCuIPEob3ANgdnWmoh5Z3l-g"
+                       target="_blank">
+                        <span class="fab fa-youtube fa-1x"></span> YouTube
+                    </a>
+
+                    <a class="pl-1 btn btn-link"
+                       href="https://twitter.com/firechickengms"
+                       target="_blank">
+                        <span class="fab fa-twitter fa-1x"></span> Twitter
+                    </a>
+                </div>
+            </nav>
         </div>
-    </nav>
+    </div>
 </div>
 
-<div class="bg-danger text-white">
-    <div class="container text-center text-md-left">
-        <h1 class="pt-md-5">Combat for Game Creator</h1>
+<div class="bg-primary text-white">
+    <div class="container text-center text-md-left p-3 p-md-0">
+        <h1 class="pt-md-5">
+            <span>Game Dev Assets</span>
+        </h1>
         <div class="lead mb-3">
             <div>
-                The Combat module introduces game-ready combat features to the Game Creator ecosystem.
+                High quality game development assets available on the
+                <a href="https://assetstore.unity.com/publishers/47141?aid=1101leteS"
+                   class="font-weight-bold text-white">Unity Asset Store</a>.
             </div>
         </div>
-        <a class="btn btn-light rounded-pill"
-           href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669?aid=1101leteS"
-           target="_blank">
-            Download
-        </a>
-        <a class="btn btn-danger"
-           href="https://docs.firechickengames.com/"
-           target="_blank">
-            Documentation
-        </a>
     </div>
 </div>
 
-<div class="border-wave">
-    <svg viewBox="0 0 500 500" preserveAspectRatio="xMinYMin meet">
-        <path d="M0,100 C150,200 350,0 500,100 L500,00 L0,0 Z" style="stroke: none; fill:#e53935;"></path>
+<div style="margin-top: -1em;" class="d-none d-sm-block">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="background-color: white;">
+            <path fill="#282726" fill-opacity="1" d="M0,128L48,138.7C96,149,192,171,288,181.3C384,192,480,192,576,176C672,160,768,128,864,117.3C960,107,1056,117,1152,138.7C1248,160,1344,192,1392,208L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
     </svg>
 </div>
 
+<div class="bg-white pb-5">
+    <div class="container text-center text-md-left">
+        <div class="row text-center top-column-lg">
+            <div class="col-md-4 m-3 m-md-0">
+                <div class="card pt-4 shadow product-card">
+                    <a href="https://assetstore.unity.com/packages/tools/game-toolkits/devkit-170206?aid=1101leteS"
+                       target="_blank">
+                        <img src="img/products/devkit_product_logo.png"
+                             class="card-img-top mx-auto d-block p-3"
+                             alt="DevKit">
+                    </a>
+                    <div class="card-body bg-white">
+                        <p class="card-text">A component and API <br> game development toolkit.</p>
+                        <a href="https://assetstore.unity.com/packages/tools/game-toolkits/devkit-170206?aid=1101leteS"
+                           class="btn btn-outline-danger"
+                           target="_blank">
+                            Asset Store
+                        </a>
+                        <br>
+                        <a href="https://docs.firechickengames.com/devkit/" target="_blank"
+                           class="btn btn-link">Docs</a>
+                        <br>
+                    </div>
+                </div>
 
-<div class="container-fluid bg-white">
-    <div class="row top-column-lg">
-        <div class="col-md-6 pr-5 text-center text-lg-right">
-            <img src="img/combat_demo_1.png" class="img-fluid shadow demo-image">
-        </div>
-        <div class="col-md-4 order-first order-md-last pt-5">
-            <div class="pt-5 mt-5">
-                <h2>Versatile Targeting</h2>
-                <div>
-                    <p>Need proximity-based collider or mouse-based point-and-click targeting? Combat has you
-                        covered.</p>
-                    <p>Advanced features include player targeting by visibility and trigger/action targeting for
-                        NPCs.</p>
+            </div>
+
+            <div class="col-md-4 m-3 m-md-0">
+                <div class="card pt-4 shadow product-card">
+                    <a href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669?aid=1101leteS"
+                       target="_blank">
+                        <img src="img/products/combat_product_logo.png"
+                             class="card-img-top mx-auto d-block p-3"
+                             alt="DevKit">
+                    </a>
+                    <div class="card-body">
+                        <p class="card-text">Adds combat features to <br>
+                            <a href="https://assetstore.unity.com/packages/tools/game-toolkits/game-creator-89443?aid=1101leteS"
+                               target="_blank">Game Creator</a>.
+                        </p>
+                        <a href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669?aid=1101leteS"
+                           class="btn btn-outline-danger"
+                           target="_blank">
+                            Asset Store
+                        </a>
+                        <br>
+                        <a href="https://docs.firechickengames.com/combat/" target="_blank"
+                           class="btn btn-link">Docs</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 m-3 m-md-0">
+                <div class="card pt-4 shadow product-card">
+                    <a href="https://assetstore.unity.com/packages/3d/props/weapons/combat-weapons-pack-183570?aid=1101leteS"
+                       target="_blank">
+                        <img src="img/products/weapons_product_logo.png"
+                             class="card-img-top mx-auto d-block p-3"
+                             alt="DevKit">
+                    </a>
+                    <div class="card-body">
+                        <p class="card-text">A low-poly weapon pack - useful for <br>
+                            <a href="https://assetstore.unity.com/packages/tools/game-toolkits/game-creator-89443?aid=1101leteS"
+                               target="_blank">Game Creator</a>
+                            <a href="https://assetstore.unity.com/packages/tools/game-toolkits/shooter-155705?aid=1101leteS"
+                               target="_blank">Shooter</a> and
+                            <a href="https://assetstore.unity.com/packages/tools/game-toolkits/melee-164145?aid=1101leteS"
+                               target="_blank">Melee</a> weapons.</p>
+                        <a href="https://assetstore.unity.com/packages/3d/props/weapons/combat-weapons-pack-183570?aid=1101leteS"
+                           class="btn btn-outline-danger"
+                           target="_blank">
+                            Asset Store
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <div class="row" style="margin-top: 5em;">
-        <div class="col-2"></div>
-        <div class="col-md-4 pt-md-5 text-left">
-            <div class="pt mt-md-5">
-                <h2>Efficient Prefab Spawner</h2>
-                <p>The spawner component uses object pooling to efficiently spawn and despawn game objects.</p>
-                <p>Advanced features include multiple spawn patterns, snapping spawned objects to the ground, respawning
-                    cooldown, despawning by distance, and action-based spawning/despawning.</p>
-            </div>
-        </div>
-        <div class="col-md-6 pl-5">
-            <img src="img/combat_demo_2.png" class="img-fluid shadow demo-image">
-        </div>
-    </div>
-
-    <div class="row" style="margin-top: 5em;">
-        <div class="col-md-6 pr-5 text-center text-lg-right">
-            <img src="img/combat_demo_3.png" class="img-fluid shadow demo-image">
-        </div>
-        <div class="col-md-4 order-first order-md-last pt-md-5">
-            <div class="pt-md-5 mt-md-5">
-                <h2>Shooter and Melee Integrations</h2>
-                <p>Seamlessly switch between Shooter and Melee weapons while focused on a target.</p>
-            </div>
-        </div>
-    </div>
 </div>
 
-<div class="border-wave">
-    <svg viewBox="0 0 500 500" preserveAspectRatio="xMinYMin meet">
-        <path d="M0,100 C150,200 350,0 500,100 L500,00 L0,0 Z" style="stroke: none; fill:#fff;"></path>
-    </svg>
-</div>
-
-<div class="text-center" style="min-height: 180px;">
-    <a class="btn btn-light rounded-pill"
-       href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669?aid=1101leteS"
-       target="_blank">
-        Download
-    </a>
+<div class="text-center pt-5" style="min-height: 180px;">
+    <div class="p-3">Copyright © 2019 - <span id="copyright-year">...</span> All rights reserved</div>
 </div>
 
 <!-- JS, Popper.js, and jQuery -->
@@ -146,5 +163,10 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+
+<script>
+    // Dynamically add the copyright year.
+    $(() => $('#copyright-year').html(new Date().getFullYear().toString()));
+</script>
 </body>
 </html>
