Update link target

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <div>
                 High quality game development assets available on the
                 <a href="https://assetstore.unity.com/publishers/47141?aid=1101leteS"
+                   target="_blank"
                    class="font-weight-bold text-white">Unity Asset Store</a>.
             </div>
         </div>
