--- a/index.html
+++ b/index.html
@@ -4,81 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Fire Chicken Games</title>
-
-    <!-- CSS only -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="vendor/fontawesome/css/fontawesome.min.css">
-    <link rel="stylesheet" href="vendor/fontawesome/css/brands.min.css">
-    <link rel="stylesheet" href="vendor/fontawesome/css/solid.min.css">
 </head>
-<body style="background: #dcdbdb;">
+<body class="bg-white">
+<header class="navbar navbar-top navbar-expand-lg navbar-light navbar-fixed bg-white">
+    <div class="container justify-content-between">
+        <a class="navbar-brand order-1" href="/">
+            <a href="/" class="text-decoration-none">
+                <img src="/src/images/logo-red.svg" class="logo-image" alt="Fire Chicken Games"
+                     title="Fire Chicken Games">
+            </a>
+        </a>
 
-<div class="bg-white">
-    <div class="container">
-        <div class="d-flex flex-column flex-md-row align-items-center pt-1">
-            <div class="logo-bg rounded-circle">
-                <a href="/">
-                    <img src="img/logo-red.png" class="logo-image" alt="Fire Chicken Games" title="Fire Chicken Games">
+        <ul class="nav navbar-nav order-2">
+            <li class="nav-item">
+                <a class="pl-1 btn btn-link text-decoration-none"
+                   href="https://assetstore.unity.com/publishers/47141?aid=1101leteS"
+                   target="_blank">
+                    <span class="bi bi-unity"></span> Assets
                 </a>
-            </div>
+            </li>
+            <li class="nav-item">
+                <a class="pl-1 btn btn-link text-decoration-none"
+                   href="https://www.youtube.com/channel/UCuIPEob3ANgdnWmoh5Z3l-g"
+                   target="_blank">
+                    <span class="bi bi-youtube"></span> YouTube
+                </a>
 
-            <h5 class="my-0 mr-md-auto font-weight-normal"></h5>
-            <nav class="my-3 my-md-0 mr-md-3">
-                <div class="header-links">
-                    <a class="py-2 pl-1 btn btn-link"
-                       href="https://assetstore.unity.com/publishers/47141?aid=1101leteS"
-                       target="_blank">
-                        <span class="fab fa-unity fa-1x"></span> Assets
-                    </a>
-
-                    <a class="pl-1 btn btn-link"
-                       href="https://www.youtube.com/channel/UCuIPEob3ANgdnWmoh5Z3l-g"
-                       target="_blank">
-                        <span class="fab fa-youtube fa-1x"></span> YouTube
-                    </a>
-
-                    <a class="pl-1 btn btn-link"
-                       href="https://twitter.com/firechickengms"
-                       target="_blank">
-                        <span class="fab fa-twitter fa-1x"></span> Twitter
-                    </a>
-                </div>
-            </nav>
-        </div>
+            </li>
+            <li class="nav-item">
+                <a class="pl-1 btn btn-link text-decoration-none"
+                   href="https://twitter.com/firechickengms"
+                   target="_blank">
+                    <span class="bi bi-twitter"></span> Twitter
+                </a>
+            </li>
+        </ul>
     </div>
-</div>
+</header>
 
-<div class="bg-primary text-white">
+<!--<div class="position-absolute start-0 w-100" style="z-index: 0; top: 35%;">-->
+<!--    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="bg-primary">-->
+<!--        <path fill="#fff" fill-opacity="1"-->
+<!--              d="M0,128L48,138.7C96,149,192,171,288,181.3C384,192,480,192,576,176C672,160,768,128,864,117.3C960,107,1056,117,1152,138.7C1248,160,1344,192,1392,208L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>-->
+<!--    </svg>-->
+<!--    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"-->
+<!--         class="bg-primary rotate-180">-->
+<!--        <path fill="#fff" fill-opacity="1"-->
+<!--              d="M0,128L48,138.7C96,149,192,171,288,181.3C384,192,480,192,576,176C672,160,768,128,864,117.3C960,107,1056,117,1152,138.7C1248,160,1344,192,1392,208L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>-->
+<!--    </svg>-->
+
+<!--    <div class="text-center pt-5" style="min-height: 180px; z-index: 100;">-->
+<!--        <div class="p-3">Copyright © 2019 - <span id="copyright-year">...</span> All rights reserved</div>-->
+<!--    </div>-->
+<!--</div>-->
+
+<div class="bg-white text-black">
     <div class="container text-center text-md-left p-3 p-md-0">
         <h1 class="pt-md-5">
-            <span>Game Dev Assets</span>
+            <span>Unity Game Development Assets</span>
         </h1>
-        <div class="lead mb-3">
+        <div class="lead my-3 pb-5">
             <div>
                 High quality game development assets available on the
                 <a href="https://assetstore.unity.com/publishers/47141?aid=1101leteS"
                    target="_blank"
-                   class="font-weight-bold text-white">Unity Asset Store</a>.
+                   class="fw-bold text-decoration-none">Unity Asset Store</a>.
             </div>
         </div>
     </div>
 </div>
 
-<div style="margin-top: -1em;" class="d-none d-sm-block">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="background-color: white;">
-            <path fill="#282726" fill-opacity="1" d="M0,128L48,138.7C96,149,192,171,288,181.3C384,192,480,192,576,176C672,160,768,128,864,117.3C960,107,1056,117,1152,138.7C1248,160,1344,192,1392,208L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
-    </svg>
-</div>
-
 <div class="bg-white pb-5">
     <div class="container text-center text-md-left">
-        <div class="row text-center top-column-lg">
+        <div class="row text-center">
             <div class="col-md-4 m-3 m-md-0">
                 <div class="card pt-4 shadow product-card">
                     <a href="https://assetstore.unity.com/packages/tools/game-toolkits/devkit-170206?aid=1101leteS"
                        target="_blank">
-                        <img src="img/products/devkit_product_logo.png"
-                             class="card-img-top mx-auto d-block p-3"
+                        <img src="/src/images/products/devkit_product_logo.png"
+                             class="card-img-top mx-auto d-block w-50 p-2"
                              alt="DevKit">
                     </a>
                     <div class="card-body bg-white">
@@ -90,7 +94,7 @@
                         </a>
                         <br>
                         <a href="https://docs.firechickengames.com/devkit/" target="_blank"
-                           class="btn btn-link">Docs</a>
+                           class="btn btn-link text-decoration-none">Docs</a>
                         <br>
                     </div>
                 </div>
@@ -101,8 +105,8 @@
                 <div class="card pt-4 shadow product-card">
                     <a href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669?aid=1101leteS"
                        target="_blank">
-                        <img src="img/products/combat_product_logo.png"
-                             class="card-img-top mx-auto d-block p-3"
+                        <img src="/src/images/products/combat_product_logo.png"
+                             class="card-img-top mx-auto d-block w-50 p-2"
                              alt="DevKit">
                     </a>
                     <div class="card-body">
@@ -117,7 +121,7 @@
                         </a>
                         <br>
                         <a href="https://docs.firechickengames.com/combat/" target="_blank"
-                           class="btn btn-link">Docs</a>
+                           class="btn btn-link text-decoration-none">Docs</a>
                     </div>
                 </div>
             </div>
@@ -126,11 +130,11 @@
                 <div class="card pt-4 shadow product-card">
                     <a href="https://assetstore.unity.com/packages/3d/props/weapons/combat-weapons-pack-183570?aid=1101leteS"
                        target="_blank">
-                        <img src="img/products/weapons_product_logo.png"
-                             class="card-img-top mx-auto d-block p-3"
+                        <img src="/src/images/products/weapons_product_logo.png"
+                             class="card-img-top mx-auto d-block w-50 p-2"
                              alt="DevKit">
                     </a>
-                    <div class="card-body">
+                    <div class="card-body" style="min-height: 173px;">
                         <p class="card-text">A low-poly weapon pack - useful for <br>
                             <a href="https://assetstore.unity.com/packages/tools/game-toolkits/game-creator-89443?aid=1101leteS"
                                target="_blank">Game Creator</a>
@@ -150,24 +154,10 @@
     </div>
 </div>
 
-<div class="text-center pt-5" style="min-height: 180px;">
+<div class="text-center pt-5" style="min-height: 180px; z-index: 100;">
     <div class="p-3">Copyright © 2019 - <span id="copyright-year">...</span> All rights reserved</div>
 </div>
 
-<!-- JS, Popper.js, and jQuery -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
-
-<script>
-    // Dynamically add the copyright year.
-    $(() => $('#copyright-year').html(new Date().getFullYear().toString()));
-</script>
+<script type="module" src="/src/index.js"></script>
 </body>
 </html>
