--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Fire Chicken Games</title>
 </head>
-<body class="bg-white">
-<header class="navbar navbar-top navbar-expand-lg navbar-light navbar-fixed bg-white">
-    <div class="container justify-content-between">
+<body>
+
+<div class="position-absolute start-0 w-100 d-none d-md-block" style="z-index: 0; top: 35%;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="bg-primary">
+        <path fill="#fff" fill-opacity="1" d="M0,128L48,138.7C96,149,192,171,288,181.3C384,192,480,192,576,176C672,160,768,128,864,117.3C960,107,1056,117,1152,138.7C1248,160,1344,192,1392,208L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#e53935" fill-opacity="1" d="M0,160L48,149.3C96,139,192,117,288,122.7C384,128,480,160,576,176C672,192,768,192,864,165.3C960,139,1056,85,1152,101.3C1248,117,1344,203,1392,245.3L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+</div>
+
+<header class="navbar navbar-top navbar-expand-lg navbar-light">
+    <div class="container">
         <a class="navbar-brand order-1" href="/">
             <a href="/" class="text-decoration-none">
                 <img src="/src/images/logo-red.svg" class="logo-image" alt="Fire Chicken Games"
@@ -15,50 +23,33 @@
             </a>
         </a>
 
-        <ul class="nav navbar-nav order-2">
-            <li class="nav-item">
+        <div class="d-flex order-2">
+            <div>
                 <a class="pl-1 btn btn-link text-decoration-none"
                    href="https://assetstore.unity.com/publishers/47141?aid=1101leteS"
                    target="_blank">
                     <span class="bi bi-unity"></span> Assets
                 </a>
-            </li>
-            <li class="nav-item">
+            </div>
+            <div>
                 <a class="pl-1 btn btn-link text-decoration-none"
                    href="https://www.youtube.com/channel/UCuIPEob3ANgdnWmoh5Z3l-g"
                    target="_blank">
                     <span class="bi bi-youtube"></span> YouTube
                 </a>
-
-            </li>
-            <li class="nav-item">
+            </div>
+            <div>
                 <a class="pl-1 btn btn-link text-decoration-none"
                    href="https://twitter.com/firechickengms"
                    target="_blank">
                     <span class="bi bi-twitter"></span> Twitter
                 </a>
-            </li>
-        </ul>
+            </div>
+        </div>
     </div>
 </header>
 
-<!--<div class="position-absolute start-0 w-100" style="z-index: 0; top: 35%;">-->
-<!--    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="bg-primary">-->
-<!--        <path fill="#fff" fill-opacity="1"-->
-<!--              d="M0,128L48,138.7C96,149,192,171,288,181.3C384,192,480,192,576,176C672,160,768,128,864,117.3C960,107,1056,117,1152,138.7C1248,160,1344,192,1392,208L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>-->
-<!--    </svg>-->
-<!--    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"-->
-<!--         class="bg-primary rotate-180">-->
-<!--        <path fill="#fff" fill-opacity="1"-->
-<!--              d="M0,128L48,138.7C96,149,192,171,288,181.3C384,192,480,192,576,176C672,160,768,128,864,117.3C960,107,1056,117,1152,138.7C1248,160,1344,192,1392,208L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>-->
-<!--    </svg>-->
-
-<!--    <div class="text-center pt-5" style="min-height: 180px; z-index: 100;">-->
-<!--        <div class="p-3">Copyright © 2019 - <span id="copyright-year">...</span> All rights reserved</div>-->
-<!--    </div>-->
-<!--</div>-->
-
-<div class="bg-white text-black">
+<div class="text-black">
     <div class="container text-center text-md-left p-3 p-md-0">
         <h1 class="pt-md-5">
             <span>Unity Game Development Assets</span>
@@ -74,18 +65,18 @@
     </div>
 </div>
 
-<div class="bg-white pb-5">
+<div class="pb-5">
     <div class="container text-center text-md-left">
-        <div class="row text-center">
-            <div class="col-md-4 m-3 m-md-0">
-                <div class="card pt-4 shadow product-card">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card pt-4 shadow mb-3 mx-auto">
                     <a href="https://assetstore.unity.com/packages/tools/game-toolkits/devkit-170206?aid=1101leteS"
                        target="_blank">
                         <img src="/src/images/products/devkit_product_logo.png"
                              class="card-img-top mx-auto d-block w-50 p-2"
                              alt="DevKit">
                     </a>
-                    <div class="card-body bg-white">
+                    <div class="card-body">
                         <p class="card-text">A component and API <br> game development toolkit.</p>
                         <a href="https://assetstore.unity.com/packages/tools/game-toolkits/devkit-170206?aid=1101leteS"
                            class="btn btn-outline-danger"
@@ -101,8 +92,8 @@
 
             </div>
 
-            <div class="col-md-4 m-3 m-md-0">
-                <div class="card pt-4 shadow product-card">
+            <div class="col-md-4">
+                <div class="card pt-4 shadow mb-3 mx-auto">
                     <a href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669?aid=1101leteS"
                        target="_blank">
                         <img src="/src/images/products/combat_product_logo.png"
@@ -126,8 +117,8 @@
                 </div>
             </div>
 
-            <div class="col-md-4 m-3 m-md-0">
-                <div class="card pt-4 shadow product-card">
+            <div class="col-md-4">
+                <div class="card pt-4 shadow mb-3 mx-auto">
                     <a href="https://assetstore.unity.com/packages/3d/props/weapons/combat-weapons-pack-183570?aid=1101leteS"
                        target="_blank">
                         <img src="/src/images/products/weapons_product_logo.png"
@@ -154,7 +145,7 @@
     </div>
 </div>
 
-<div class="text-center pt-5" style="min-height: 180px; z-index: 100;">
+<div class="text-center position-relative" style="min-height: 180px; z-index: 10; margin-top: 100px;">
     <div class="p-3">Copyright © 2019 - <span id="copyright-year">...</span> All rights reserved</div>
 </div>
 
