--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 
 <div class="position-absolute start-0 w-100 d-none d-md-block" style="z-index: 0; top: 35%;">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="bg-primary">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="bg-secondary">
         <path fill="#fff" fill-opacity="1" d="M0,128L48,138.7C96,149,192,171,288,181.3C384,192,480,192,576,176C672,160,768,128,864,117.3C960,107,1056,117,1152,138.7C1248,160,1344,192,1392,208L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
     </svg>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#e53935" fill-opacity="1" d="M0,160L48,149.3C96,139,192,117,288,122.7C384,128,480,160,576,176C672,192,768,192,864,165.3C960,139,1056,85,1152,101.3C1248,117,1344,203,1392,245.3L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fb8c00" fill-opacity="1" d="M0,160L48,149.3C96,139,192,117,288,122.7C384,128,480,160,576,176C672,192,768,192,864,165.3C960,139,1056,85,1152,101.3C1248,117,1344,203,1392,245.3L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
 </div>
 
 <header class="navbar navbar-top navbar-expand-lg navbar-light">
@@ -79,9 +79,9 @@
                     <div class="card-body">
                         <p class="card-text">A component and API <br> game development toolkit.</p>
                         <a href="https://assetstore.unity.com/packages/tools/game-toolkits/devkit-170206?aid=1101leteS"
-                           class="btn btn-outline-danger"
+                           class="btn btn-primary text-white w-100"
                            target="_blank">
-                            Asset Store
+                            Get on the Asset Store
                         </a>
                         <br>
                         <a href="https://docs.firechickengames.com/devkit/" target="_blank"
@@ -106,9 +106,9 @@
                                target="_blank">Game Creator</a>.
                         </p>
                         <a href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669?aid=1101leteS"
-                           class="btn btn-outline-danger"
+                           class="btn btn-primary text-white w-100"
                            target="_blank">
-                            Asset Store
+                            Get on the Asset Store
                         </a>
                         <br>
                         <a href="https://docs.firechickengames.com/combat/" target="_blank"
@@ -134,9 +134,9 @@
                             <a href="https://assetstore.unity.com/packages/tools/game-toolkits/melee-164145?aid=1101leteS"
                                target="_blank">Melee</a> weapons.</p>
                         <a href="https://assetstore.unity.com/packages/3d/props/weapons/combat-weapons-pack-183570?aid=1101leteS"
-                           class="btn btn-outline-danger"
+                           class="btn btn-primary text-white w-100"
                            target="_blank">
-                            Asset Store
+                            Get on the Asset Store
                         </a>
                     </div>
                 </div>
