Add product announcement

--- a/index.html
+++ b/index.html
@@ -65,8 +65,33 @@
     </div>
 </div>
 
-<div class="pb-5">
+<div class="pb-5 mt-5">
     <div class="container text-center text-md-left">
+        <div class="row mb-5">
+            <div class="col-md-4 offset-4">
+                <div class="card pt-4 shadow mb-3 mx-auto ribbon-box">
+                    <a href="https://assetstore.unity.com/packages/tools/game-toolkits/spawning-game-creator-2-262016?aid=1101leteS"
+                       target="_blank">
+                        <img src="/src/images/products/spawning_product_logo.png"
+                             class="card-img-top mx-auto d-block w-50 p-1"
+                             alt="Spawning (Game Creator 2)">
+                    </a>
+                    <div class="card-body">
+                        <p class="card-text">A spawning module for <a href="https://assetstore.unity.com/packages/tools/game-toolkits/game-creator-2-203069?aid=1101leteS">Game Creator 2</a>.</p>
+                        <a href="https://assetstore.unity.com/packages/tools/game-toolkits/devkit-170206?aid=1101leteS"
+                           class="btn btn-primary text-white w-100"
+                           target="_blank">
+                            Get on the Asset Store
+                        </a>
+                        <br>
+                        <a href="https://docs.firechickengames.com/spawning/" target="_blank"
+                           class="btn btn-link text-decoration-none">Docs</a>
+                        <br>
+                    </div>
+                    <div class="ribbon ribbon-top-right"><span>New</span></div>
+                </div>
+            </div>
+        </div>
         <div class="row">
             <div class="col-md-4">
                 <div class="card pt-4 shadow mb-3 mx-auto">
@@ -89,7 +114,6 @@
                         <br>
                     </div>
                 </div>
-
             </div>
 
             <div class="col-md-4">
