Fix responsive issue

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <div class="pb-5 mt-5">
     <div class="container text-center text-md-left">
         <div class="row mb-5">
-            <div class="col-md-4 offset-4">
+            <div class="col-md-4 offset-md-4">
                 <div class="card pt-4 shadow mb-3 mx-auto ribbon-box">
                     <a href="https://assetstore.unity.com/packages/tools/game-toolkits/spawning-game-creator-2-262016?aid=1101leteS"
                        target="_blank">
