--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-<div class="position-absolute start-0 w-100 d-none d-md-block" style="z-index: 0; top: 35%;">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="bg-secondary">
+<div class="position-absolute start-0 w-100 d-md-block" style="z-index: 0; top: 35%;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 300" class="bg-secondary">
         <path fill="#fff" fill-opacity="1" d="M0,128L48,138.7C96,149,192,171,288,181.3C384,192,480,192,576,176C672,160,768,128,864,117.3C960,107,1056,117,1152,138.7C1248,160,1344,192,1392,208L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
     </svg>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fb8c00" fill-opacity="1" d="M0,160L48,149.3C96,139,192,117,288,122.7C384,128,480,160,576,176C672,192,768,192,864,165.3C960,139,1056,85,1152,101.3C1248,117,1344,203,1392,245.3L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
@@ -22,158 +22,28 @@
                      title="Fire Chicken Games">
             </a>
         </a>
-
-        <div class="d-flex order-2">
-            <div>
-                <a class="pl-1 btn btn-link text-decoration-none"
-                   href="https://assetstore.unity.com/publishers/47141?aid=1101leteS"
-                   target="_blank">
-                    <span class="bi bi-unity"></span> Assets
-                </a>
-            </div>
-            <div>
-                <a class="pl-1 btn btn-link text-decoration-none"
-                   href="https://www.youtube.com/channel/UCuIPEob3ANgdnWmoh5Z3l-g"
-                   target="_blank">
-                    <span class="bi bi-youtube"></span> YouTube
-                </a>
-            </div>
-            <div>
-                <a class="pl-1 btn btn-link text-decoration-none"
-                   href="https://twitter.com/firechickengms"
-                   target="_blank">
-                    <span class="bi bi-twitter"></span> Twitter
-                </a>
-            </div>
-        </div>
     </div>
 </header>
 
 <div class="text-black">
     <div class="container text-center text-md-left p-3 p-md-0">
-        <h1 class="pt-md-5">
-            <span>Unity Game Development Assets</span>
+        <h1 class="pt-md-5 mt-md-4">
+            <span>Fire Chicken Games has closed its doors.</span>
         </h1>
         <div class="lead my-3 pb-5">
-            <div>
-                High quality game development assets available on the
-                <a href="https://assetstore.unity.com/publishers/47141?aid=1101leteS"
-                   target="_blank"
-                   class="fw-bold text-decoration-none">Unity Asset Store</a>.
+            <div class="mt-md-5">
+                For everyone that supported the company over the years,
+            </div>
+            <div class="mt-md-2">
+                I would like to extend a warm heartfelt thank you.
             </div>
         </div>
     </div>
 </div>
 
-<div class="pb-5 mt-5">
-    <div class="container text-center text-md-left">
-        <div class="row mb-5">
-            <div class="col-md-4 offset-md-4">
-                <div class="card pt-4 shadow mb-3 mx-auto ribbon-box">
-                    <a href="https://assetstore.unity.com/packages/tools/game-toolkits/spawning-game-creator-2-262016?aid=1101leteS"
-                       target="_blank">
-                        <img src="/src/images/products/spawning_product_logo.png"
-                             class="card-img-top mx-auto d-block w-50 p-1"
-                             alt="Spawning (Game Creator 2)">
-                    </a>
-                    <div class="card-body">
-                        <p class="card-text">A spawning module for <a href="https://assetstore.unity.com/packages/tools/game-toolkits/game-creator-2-203069?aid=1101leteS">Game Creator 2</a>.</p>
-                        <a href="https://assetstore.unity.com/packages/tools/game-toolkits/spawning-game-creator-2-262016?aid=1101leteS"
-                           class="btn btn-primary text-white w-100"
-                           target="_blank">
-                            Get on the Asset Store
-                        </a>
-                        <br>
-                        <a href="https://docs.firechickengames.com/spawning/"
-                           target="_blank"
-                           class="btn btn-link text-decoration-none">Docs</a>
-                        <br>
-                        <a href="https://firechickengames.com/spawning-demo/"
-                           target="_blank"
-                           class="btn btn-link text-decoration-none">Demo</a>
-                    </div>
-                    <div class="ribbon ribbon-top-right"><span>New</span></div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card pt-4 shadow mb-3 mx-auto">
-                    <a href="https://assetstore.unity.com/packages/tools/game-toolkits/devkit-170206?aid=1101leteS"
-                       target="_blank">
-                        <img src="/src/images/products/devkit_product_logo.png"
-                             class="card-img-top mx-auto d-block w-50 p-2"
-                             alt="DevKit">
-                    </a>
-                    <div class="card-body">
-                        <p class="card-text">A component and API <br> game development toolkit.</p>
-                        <a href="https://assetstore.unity.com/packages/tools/game-toolkits/devkit-170206?aid=1101leteS"
-                           class="btn btn-primary text-white w-100"
-                           target="_blank">
-                            Get on the Asset Store
-                        </a>
-                        <br>
-                        <a href="https://docs.firechickengames.com/devkit/" target="_blank"
-                           class="btn btn-link text-decoration-none">Docs</a>
-                        <br>
-                    </div>
-                </div>
-            </div>
 
-            <div class="col-md-4">
-                <div class="card pt-4 shadow mb-3 mx-auto">
-                    <a href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669?aid=1101leteS"
-                       target="_blank">
-                        <img src="/src/images/products/combat_product_logo.png"
-                             class="card-img-top mx-auto d-block w-50 p-2"
-                             alt="DevKit">
-                    </a>
-                    <div class="card-body">
-                        <p class="card-text">Adds combat features to <br>
-                            <a href="https://assetstore.unity.com/packages/tools/game-toolkits/game-creator-89443?aid=1101leteS"
-                               target="_blank">Game Creator</a>.
-                        </p>
-                        <a href="https://assetstore.unity.com/packages/tools/input-management/combat-for-game-creator-164669?aid=1101leteS"
-                           class="btn btn-primary text-white w-100"
-                           target="_blank">
-                            Get on the Asset Store
-                        </a>
-                        <br>
-                        <a href="https://docs.firechickengames.com/combat/" target="_blank"
-                           class="btn btn-link text-decoration-none">Docs</a>
-                    </div>
-                </div>
-            </div>
 
-            <div class="col-md-4">
-                <div class="card pt-4 shadow mb-3 mx-auto">
-                    <a href="https://assetstore.unity.com/packages/3d/props/weapons/combat-weapons-pack-183570?aid=1101leteS"
-                       target="_blank">
-                        <img src="/src/images/products/weapons_product_logo.png"
-                             class="card-img-top mx-auto d-block w-50 p-2"
-                             alt="DevKit">
-                    </a>
-                    <div class="card-body" style="min-height: 173px;">
-                        <p class="card-text">A low-poly weapon pack - useful for <br>
-                            <a href="https://assetstore.unity.com/packages/tools/game-toolkits/game-creator-89443?aid=1101leteS"
-                               target="_blank">Game Creator</a>
-                            <a href="https://assetstore.unity.com/packages/tools/game-toolkits/shooter-155705?aid=1101leteS"
-                               target="_blank">Shooter</a> and
-                            <a href="https://assetstore.unity.com/packages/tools/game-toolkits/melee-164145?aid=1101leteS"
-                               target="_blank">Melee</a> weapons.</p>
-                        <a href="https://assetstore.unity.com/packages/3d/props/weapons/combat-weapons-pack-183570?aid=1101leteS"
-                           class="btn btn-primary text-white w-100"
-                           target="_blank">
-                            Get on the Asset Store
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="text-center position-relative" style="min-height: 180px; z-index: 10; margin-top: 100px;">
+<div class="text-center position-relative" style="min-height: 100px; z-index: 10; margin-top: 400px;">
     <div class="p-3">Copyright © 2019 - <span id="copyright-year">...</span> All rights reserved</div>
 </div>
 
